Tambah activity_terjemah.xml dan activity_tebak_huruf.xml dan merapikan struktur menu

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,13 +19,13 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:text="Penerjemah"
-            android:id="@+id/btnPenerjemah" />
+            android:id="@+id/btnViewPenerjemah" />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:text="Tebak Huruf"
-            android:id="@+id/btnTebak" />
+            android:id="@+id/btnViewTebak" />
 
 
     </LinearLayout>
